welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() { Carr-four-color();
}


def faireV(c:Color) = {
	setCouleurBrosse(c)
	avance();
	baisseBrosse(); leveBrosse();
	avance(); avance();
	baisseBrosse(); leveBrosse();
	gauche(); avance(); gauche(); avance();
	baisseBrosse(); leveBrosse();
	retourne(); avance(); avance(); droite(); avance(); retourne();
}

def Carr-four-color() = {
	faireV(Color.yellow);
     faireV(Color.red);
     faireV(Color.blue);
     faireV(Color.green);

	
}
